--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,10 @@
     "firebase-functions": "^5.0.1",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "tensorflow": "^2.10.0",
+    "keras": "^2.8.0",
+    "matplotlib": "^4.5.0",
+    "numpy": "^1.22.0"
   }
 }
