--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,6 @@
     "firebase-functions": "^5.0.1",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7",
-    "tensorflow": "latest",
-    "matplotlib": "latest",
-    "numpy": "latest",
-    "keras": "latest",
-    "ref":"latest"
+    "path": "^0.12.7"
   }
 }
